
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth = "300dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <Button
        android:id="@+id/btn_enable_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_message"
        style="@style/AppTheme.FormButton" />
    
    <Button
        android:id="@+id/btn_enable_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_package"
        style="@style/AppTheme.FormButton" />
    
    <TextView
        android:id="@+id/text_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enabled"
        android:visibility="gone"
        style="@style/AppTheme.DialogText" />
    
    <!-- Default: not visible -->
    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:visibility="gone"
        style="@style/AppTheme.FormButton" />
    
</LinearLayout>
